# Flashcards

./: .gitignore  README.md  database.c  database.h  flashcards.c  flashcards.gresource.xml  flashcardsapp.c  flashcardsapp.h  meson.build  window.ui
.vscode.old/: c_cpp_properties.json
po/: POTFILES  de.po  en.po  flashcards.pot
resources/: flashcards.gresource.xml  meson.build  window.blp  window.ui
src/: database.c  database.h  flashcardsapp.c  flashcardsapp.h  flashcardsappwin.c  flashcardsappwin.h  main.c  meson.build
